corresponding fix for about js

--- a/about.html
+++ b/about.html
@@ -87,16 +87,6 @@
               <img src="image/php.png" alt="php" />
               <img src="image/mysql.png" alt="mysql" />
             </div>
-            <div class="icon-carousel">
-              <img src="image/html.png" alt="html" />
-              <img src="image/css.png" alt="css" />
-              <img src="image/js.png" alt="javascript" />
-              <img src="image/bootstrap.png" alt="bootstrap" />
-              <img src="image/java.png" alt="java" />
-              <img src="image/c++.png" alt="c++" />
-              <img src="image/php.png" alt="php" />
-              <img src="image/mysql.png" alt="mysql" />
-            </div>
           </div>
         </div>
       </div>
@@ -125,7 +115,7 @@
     </div>
 
     <script src="js/video.js"></script>
-<!--     <script src="js/about.js"></script> -->
+    <script src="js/about.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
