replaced iframe with div to reduce access time as they were already non-clickable in mobile or desktop mode

--- a/projects.html
+++ b/projects.html
@@ -65,7 +65,7 @@
               <div class="website-iframe">
                 <img
                   src="image/Project-Food.png"
-                  alt="project-doctor"
+                  alt="project-foodies-hub"
                   class="dummy-website-project"
                 />
               </div>
@@ -194,12 +194,13 @@
               </div>
             </div>
             <div class="project-iframe-wrapper">
-              <iframe
-                src="https://manitosh-paul.github.io/TaskNest/"
-                frameborder="0"
-                scrolling="no"
-                class="website-iframe"
-              ></iframe>
+              <div class="website-iframe">
+                <img
+                  src="image/Project-TaskNest.png"
+                  alt="project-TaskNest"
+                  class="dummy-website-project"
+                />
+              </div>
             </div>
             <div class="project-function-wrapper">
               <div class="hide-btn">
@@ -259,11 +260,13 @@
               </div>
             </div>
             <div class="project-iframe-wrapper">
-              <iframe
-                src="https://manitosh-paul.github.io/Website-Bootstrap/"
-                frameborder="0"
-                class="website-iframe"
-              ></iframe>
+              <div class="website-iframe">
+                <img
+                  src="image/Project-Website-Bootstrp.png"
+                  alt="project-website-bootstrp-clone"
+                  class="dummy-website-project"
+                />
+              </div>
             </div>
             <div class="project-function-wrapper">
               <div class="hide-btn">
@@ -329,7 +332,7 @@
               <div class="website-iframe">
                 <img
                   src="image/Project-Food.png"
-                  alt="project-doctor"
+                  alt="project-foodies-hub"
                   class="dummy-website-project"
                 />
               </div>
